# TaskFlow

./: README.md  app.py  index.html  pyproject.toml
instance/: app.db
templates/: base.html  dashboard.html  index.html  projects.html  register.html  task_form.html
